Add first lines of JS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>BLOG</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -10,9 +10,9 @@
   <div class="container">
     <h1 class="logo">my blog</h1>
     <main class="wrapper">
-      <aside class="sidebar">				
+      <aside class="sidebar">
         <h2 class="section-title">All posts</h2>
-        <ul class="list titles">
+        <ul class="list titles">					
           <li><a href="#article-1" class="active"><span>Article 1</span></a></li>
           <li><a href="#article-2"><span>Article 2</span></a></li>
           <li><a href="#article-3"><span>Article 3</span></a></li>
@@ -247,6 +247,6 @@
     </main>
   </div>
 </div>
-	<<script src="js/script.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
